<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/hotel_booking"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Hotel_Booking" />
        <item
            android:id="@+id/Transport"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/Transport" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/food" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_add_location_black_24dp"
            android:title="@string/visit" />
    </group>

</menu>
