<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TransportForm"
    tools:showIn="@layout/activity_transport_form">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtName"
                    style="@style/modifiedEditText"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtEmail"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    style="@style/modifiedEditText"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/whiteTextColor"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTNIC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtnic"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    style="@style/modifiedEditText"
                    android:ems="10"
                    android:hint="@string/nic"
                    android:inputType="number"
                    android:textColor="@color/whiteTextColor"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtMob"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    style="@style/modifiedEditText"
                    android:hint="@string/mobno"
                    android:inputType="phone"
                    android:textColor="@color/whiteTextColor"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txthow"
                    style="@style/modifiedEditText"
                    android:hint="@string/passengers"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txttype"
                    style="@style/modifiedEditText"
                    android:hint="@string/transporttype"
                    android:inputType="text"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTPickdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtin"
                    style="@style/modifiedEditText"
                    android:hint="@string/pickupdatelabel"
                    android:inputType="date"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTReturndate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtcheckout"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    style="@style/modifiedEditText"
                    android:hint="@string/out"
                    android:inputType="date"
                    android:textColor="@color/whiteTextColor"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/centre_button"
                android:text="@string/send"
                android:textColor="@color/whiteTextColor" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.NestedScrollView>
